[package]
name = "ra"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
clap = { version = "3.2.5", features = ["derive"] }
env_logger = "0.8.4"
log = "0.4.17"
pulldown-cmark = "0.9.1"
